--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
+/* ---------- GLOBAL CSS ----------------- */
 body {
   max-width: 90%;
   margin: auto;
+  background-color: whitesmoke;
 }
 
-hr {
-  max-width: 95%;
-}
-
-.appDescription {
-  width: 80%;
-  height: 300px;
+#root>div {
+  width: 70%;
   margin: auto;
-  overflow-y: scroll;
 }
 
 .selectionMap {
@@ -25,30 +21,18 @@ hr {
   margin: 0px 0px 0px 30px;
 }
 
-.datagroup {
-  display: flex;
+button {
+  border-radius: 0.5em;
+  min-height: 2.5em;
+  min-width: 4em;
+  background-color: #cee0ff;
+  border-color: #9c9c9c;
 }
 
-.sectionTitle {
-  width: 40%;
-  margin-right: 20px;
-}
+/* ---------- END GLOBAL CSS ----------------- */
 
-.dataTables {
-  display: flex;
-}
-
-table {
-  margin: 10px 20px;
-  text-align: center;
-}
-
-td {
-  width: 70px;
-  font-size: 14px;
-}
-
-#species button {
+/* ---------- LANDING PAGE CSS ----------------- */
+.landingPage button {
   margin: auto 10px;
 }
 
@@ -57,9 +41,69 @@ td {
   flex-flow: row nowrap;
 }
 
-.residency button {
-  margin: auto 10px;
+.appDescription {
+  width: 80%;
+  height: 300px;
+  padding: 1em;
+  margin: 1em auto;
+  overflow-y: scroll;
+  background-color: #FFFFFF;
+  border-radius: 1em;
 }
+
+#startButton {
+  margin: auto auto auto 80%;
+  height: 2em;
+  background-color: #f9ab62;
+}
+/* ---------- END LANDING PAGE CSS ----------------- */
+
+/* ----------SEARCH BAR CSS ------------ */
+.searchBar {
+  padding: 0.35em;
+}
+
+.searchBar > input {
+  margin-right: 0.5em;
+  min-height: 2em;
+}
+
+.searchBar > button {
+
+}
+
+/* ---------- END SEARCH BAR CSS ------------ */
+
+/* ---------- DATA GROUP/TABLES CSS ----------- */
+.datagroup {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #FFFFFF;
+  margin: 1em auto;
+  border-radius: 1em;
+  padding: 1.5em;
+}
+
+.sectionTitle {
+  width: 40%;
+}
+
+.dataTables {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1em auto;
+}
+
+/* table {
+  margin: 10px auto;
+  text-align: center;
+} */
+
+td {
+  font-size: 1em;
+}
+
+/* ---------- END DATA GROUP/TABLES CSS ----------- */
 
 .home {
   margin: auto 10px;
@@ -76,39 +120,4 @@ td {
 
 .title h1 {
   width: 90%;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
