--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ button {
 #startButton {
   margin: auto auto auto 80%;
   height: 2em;
-  background-color: #f9ab62;
+  font-size: large;
 }
 /* ---------- END LANDING PAGE CSS ----------------- */
 
@@ -82,16 +82,20 @@ button {
   margin: 1em auto;
   border-radius: 1em;
   padding: 1.5em;
+  min-width: 750px;
 }
 
 .sectionTitle {
-  width: 40%;
+  width: 20%;
 }
 
 .dataTables {
   display: flex;
   flex-wrap: wrap;
-  margin: 1em auto;
+}
+
+.dataTables div {
+  margin: 1em 1em;
 }
 
 /* table {
