--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,16 @@ button {
 /* ---------- END SEARCH BAR CSS ------------ */
 
 /* ---------- DATA GROUP/TABLES CSS ----------- */
+.comparisonChartArea {
+  display: flex;
+  flex-flow: row, wrap;
+  margin: 1em auto;
+  border-radius: 1em;
+  min-width: 750px;
+  padding: 1.5em;
+  background-color: #FFFFFF;
+}
+
 .datagroup {
   display: flex;
   flex-wrap: wrap;
@@ -98,10 +108,31 @@ button {
   margin: 1em 1em;
 }
 
-/* table {
+.predictions {
+  min-width: 90%;
+  padding: 1.5em;
+}
+
+.simpleTable {
   margin: 10px auto;
   text-align: center;
+}
+
+/* .simpleTable table {
+  width: 40%;
 } */
+
+.simpleTable th {
+  width: 50px;
+}
+
+.simpleTable td {
+  width: 50px;
+}
+
+table caption {
+  min-width: 20%
+}
 
 td {
   font-size: 1em;
