--- a/src/App.css
+++ b/src/App.css
@@ -77,12 +77,16 @@ button {
 /* ---------- DATA GROUP/TABLES CSS ----------- */
 .comparisonChartArea {
   display: flex;
-  flex-flow: row, wrap;
+  flex-flow: wrap;
   margin: 1em auto;
   border-radius: 1em;
   min-width: 750px;
   padding: 1.5em;
   background-color: #FFFFFF;
+}
+
+.comparisonTitle {
+  margin: auto auto auto 40%;
 }
 
 .datagroup {
@@ -118,10 +122,6 @@ button {
   text-align: center;
 }
 
-/* .simpleTable table {
-  width: 40%;
-} */
-
 .simpleTable th {
   width: 50px;
 }
@@ -131,7 +131,7 @@ button {
 }
 
 table caption {
-  min-width: 20%
+  min-width: 200px;
 }
 
 td {
