changed class references from dataTables to dataCharts

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,11 @@ input {
   margin: 1em 1em;
 }
 
+.dataCharts {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .dataTables div {
   margin: 1em 1em;
 }
